Mon Feb  9 13:52:30 GMT 2004 (trog)
-----------------------------------

  * libclamav/ole2_extract.c: Change directives in
	accordance with clamav-config.h - should fix-up
	what (tk) was trying to do.

Mon Feb  9 13:40:37 GMT 2004 (trog)
-----------------------------------

  * libclamav/ole2_extract.c: Revert erroneous patch from (tk)

Mon Feb  9 11:09:56 GMT 2004 (njh)
----------------------------------
  * clamav-milter:	Added --headers patch from "Leonid Zeitlin"
	<lz@europe.com>, though a lot of people have requested it!

Mon Feb  9 02:04:36 CET 2004 (tk)
---------------------------------
  * freshclam: work-around for potential database downgrade (subtle problem
	       in r-r dns handling) - reported by Daniel Mario Vega
	       <dv5a*dc.uba.ar>, patched by Luca Gibelli <nervous*clamav.net>.

Sat Feb  7 23:18:51 GMT 2004 (njh)
----------------------------------
  * libclamav: Handle empty content-type subtypes, e.g. headers such as
		Content-Type: text/
		Noted by Stefan Kaltenbrunner <mm-mailinglist*madness.at>
  		
Sat Feb  7 23:37:52 CET 2004 (tk)
---------------------------------
  * libclamav: scan "Return-path: " mail files (detection was broken due to
	       case sensitivity of the new file type guessing code). Reported
	       by Nigel.

Sat Feb  7 12:19:37 GMT 2004 (njh)
----------------------------------
  * clamav-milter:	URL updated
	Fixed compilation error created by new clamav-config.h mechanism

Sat Feb  7 13:00:20 CET 2004 (tk)
---------------------------------
  * libclamav: fixed compilation error (reported by Nigel)

Fri Feb  6 20:50:43 CET 2004 (tk)
---------------------------------
  * libclamav: ole2 wrapper: fixed segfault with some documents (Thomas Lamy)

Fri Feb  6 14:36:36 CET 2004 (tk)
---------------------------------
  * support for clamav-config.h instead of multiple defines (Thomas Lamy)
  * libclamav: more flexible file type recognition (Thomas Lamy)

Fri Feb  6 13:20:51 GMT 2004 (njh)
----------------------------------